// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute http forex endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 4494.0249,
  },
  "result": 4494.0249,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;

exports[`execute http live endpoint should return success 1`] = `
Object {
  "data": Object {
    "result": 128.785,
  },
  "result": 128.785,
  "statusCode": 200,
  "timestamps": Object {
    "providerDataReceived": 1641035471111,
    "providerDataRequested": 1641035471111,
  },
}
`;
